[gd_scene load_steps=3 format=3 uid="uid://bnxg8kp13wc77"]

[ext_resource type="Script" path="res://src/ui_components/player_box/player_box.gd" id="1_soty0"]
[ext_resource type="PackedScene" uid="uid://dcxrkfsdl86cs" path="res://src/ui_components/player_label/player_label.tscn" id="2_b4nm0"]

[node name="PlayerBox" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
anchors_preset = -1
anchor_right = 0.191146
anchor_bottom = 0.0537037
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("1_soty0")
metadata/_edit_use_anchors_ = true

[node name="PlayerLabel" parent="." instance=ExtResource("2_b4nm0")]
layout_mode = 2

[node name="RemoveDialog" type="ConfirmationDialog" parent="."]
title = "REMOVE"
position = Vector2i(336, 79)
size = Vector2i(400, 150)

[node name="HBoxContainer" type="HBoxContainer" parent="RemoveDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 53.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RemoveDialog/HBoxContainer"]
layout_mode = 2
text = "REMOVE_PRICE"

[node name="Price" type="LineEdit" parent="RemoveDialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "PRICE"

[connection signal="action" from="PlayerLabel" to="." method="_on_player_label_action"]
[connection signal="confirmed" from="RemoveDialog" to="." method="_on_remove_dialog_confirmed"]
